[package]
name = "coindcx-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
hmac = "0.12.1"
hex = "0.4.3"
sha2 = "0.10.9"
reqwest = { version = "0.13", features = ["json"] }
once_cell = "1.21.3"
rust_decimal = { version = "1.40.0", features = ["serde"] }
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }
